--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -11,7 +11,7 @@ body {
 
 #container {
   margin: 0 auto;
-  padding: 50px 100px;
+  padding: 10px 0;
   height: 100vh;
 }
 
@@ -61,12 +61,12 @@ ul {
 
 li {
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   background: #b2b1b1;
   cursor: pointer;
-  padding: 10px;
+  padding: 4px;
   border-radius: 5px;
-  margin: 5px;
+  margin: 2px;
   position: relative;
 }
 
@@ -82,16 +82,20 @@ li:active {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 #content-data {
-  width: 50%;
+  width: 100%;
+}
+
+#content-data li {
+  max-width: 80%;
 }
 
 #content-editing {
   background: #b2b1b1;
-  width: 40%;
-  height: 80vh;
+  width: 100%;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -104,7 +108,7 @@ li:active {
 }
 
 #categories li {
-  width: 160px;
+  width: 100px;
 }
 
 #category-content,
@@ -115,33 +119,34 @@ li:active {
 
 .content-editing-btn,
 .content-info-btn {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: bold;
   position: absolute;
-  top: 8px;
+  top: 4px;
 }
 
 li .info-btn {
-  left: 36px;
+  left: 24px;
 }
 
 li .create-btn {
-  right: -36px;
+  right: -24px;
 }
 
 li .update-btn {
-  right: -72px;
+  right: -48px;
 }
 
 li .delete-btn {
-  right: -108px;
+  right: -72px;
 }
 
 li .links-btn {
-  right: 0px;
+  color: rgb(8, 8, 150);
+  left: 48px;
 }
 
 .create-btn {
@@ -158,6 +163,7 @@ li .links-btn {
 
 /*editing-form*/
 #editing-form {
+  font-size: 14px;
   background: #e9e9e9;
   display: flex;
   flex-direction: column;
@@ -165,13 +171,13 @@ li .links-btn {
 }
 
 #editing-form label {
-  font-size: 20px;
   display: block;
   margin-bottom: 8px;
 }
 
 #editing-form input,
 textarea {
+  font-size: 12px;
   width: 100%;
   padding: 8px;
   margin-bottom: 16px;
@@ -183,12 +189,13 @@ textarea {
 }
 
 #editing-form button {
+  font-size: 16px;
   color: black;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 200px;
+  width: 120px;
   margin: 0 auto;
 }
 
@@ -206,7 +213,6 @@ textarea {
 
 #message-window {
   margin-top: 20px;
-  font-size: 20px;
   text-align: center;
 }
 
@@ -218,22 +224,30 @@ textarea {
   color: rgb(33, 176, 33);
 }
 
+/*info window*/
 #content-editing h3,
 h4 {
-  padding: 10px;
+  padding: 5px;
 }
 
 #content-editing p {
-  padding: 10px 10px 10px 20px;
+  padding: 5px 5px 5px 20px;
+  max-height: 200px;
+  overflow: auto;
 }
 
 #content-editing ul {
   background: none;
 }
 
+#content-editing li,
+#content-editing p,
+#content-editing h4 {
+  font-size: 14px;
+}
+
 #content-editing li {
   text-align: start;
-  font-size: 16px;
   cursor: pointer;
   padding: 5px;
   margin: 5px;
@@ -242,7 +256,7 @@ h4 {
 #content-editing .content-editing-btn {
   width: 25px;
   height: 25px;
-  font-size: 20px;
+  font-size: 14px;
   top: 2px;
 }
 
@@ -277,4 +291,156 @@ h4 {
   color: #b2b1b1;
   font-weight: bold;
   border: none;
+}
+
+@media (min-width: 768px) {
+  #content-data li {
+    max-width: 90%;
+  }
+}
+
+@media (min-width: 1024px) {
+  #container {
+    padding: 20px 60px;
+  }
+
+  li {
+    font-size: 16px;
+    padding: 6px;
+    margin: 3px;
+  }
+
+  #categories li {
+    width: 120px;
+  }
+
+  #content {
+    flex-direction: row;
+  }
+
+  #content-data {
+    width: 50%;
+  }
+
+  #content-editing {
+    width: 40%;
+    height: 80vh;
+  }
+
+  #content-data li {
+    max-width: unset;
+  }
+
+  .content-editing-btn,
+  .content-info-btn {
+    width: 24px;
+    height: 24px;
+    font-size: 20px;
+  }
+
+  li .info-btn {
+    left: 30px;
+  }
+
+  li .create-btn {
+    right: -30px;
+  }
+
+  li .update-btn {
+    right: -60px;
+  }
+
+  li .delete-btn {
+    right: -90px;
+  }
+
+  li .links-btn {
+    color: rgb(8, 8, 150);
+    left: 60px;
+  }
+
+  /*editing-form*/
+  #editing-form {
+    font-size: 16px;
+  }
+
+  #editing-form input,
+  textarea {
+    font-size: 14px;
+  }
+
+  #editing-form button {
+    font-size: 18px;
+    width: 140px;
+  }
+
+  /*info window*/
+  #content-editing li,
+  #content-editing p,
+  #content-editing h4 {
+    font-size: 16px;
+  }
+
+  #content-editing .content-editing-btn {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1440px) {
+  #container {
+    padding: 50px 100px;
+  }
+
+  li {
+    font-size: 20px;
+    padding: 10px;
+    margin: 5px;
+  }
+
+  #categories li {
+    width: 160px;
+  }
+
+  .content-editing-btn,
+  .content-info-btn {
+    width: 30px;
+    height: 30px;
+    font-size: 24px;
+  }
+
+  li .info-btn {
+    left: 36px;
+  }
+
+  li .create-btn {
+    right: -36px;
+  }
+
+  li .update-btn {
+    right: -72px;
+  }
+
+  li .delete-btn {
+    right: -108px;
+  }
+
+  li .links-btn {
+    color: rgb(8, 8, 150);
+    left: 72px;
+  }
+
+  /*editing-form*/
+  #editing-form {
+    font-size: 20px;
+  }
+
+  #editing-form input,
+  textarea {
+    font-size: 16px;
+  }
+
+  #editing-form button {
+    font-size: 20px;
+    width: 180px;
+  }
 }
