--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -293,6 +293,10 @@ h4 {
   border: none;
 }
 
+#content-editing a img {
+  width: 200px;
+}
+
 @media (min-width: 768px) {
   #content-data li {
     max-width: 90%;
