--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -26,6 +26,7 @@
         </div>
     </div>
     <%- include('../../public/portions/modal_window.ejs'); %>
+    <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>    
     <script>
         <%- include('../../public/scripts/modal_window.js'); %>
         <%- include('../../public/scripts/dashboard.js'); %>
