--- a/public/portions/schools_form.ejs
+++ b/public/portions/schools_form.ejs
@@ -1,4 +1,4 @@
-<form id="editing-form">
+<form id="editing-form" enctype="multipart/form-data">
   <label for="schoolName">School name</label>
   <input type="text" id="schoolName" name="schoolName" required>
 
@@ -8,6 +8,9 @@
   <label for="link">link</label>
   <input type="text" id="link" name="link" required>
 
+  <label for="image">Upload Image</label>
+  <input type="file" id="image" name="image">
+  
   <button id="editing-submit-btn" type="submit"></button>
 </form>
 <div id="message-window"></div>
